# sensai.nvim

./: README.md  TODO.md  pyproject.toml  sensai.nvim-dev-1.rockspec
lua/sensai/: colors.lua  config.lua  health.lua  init.lua  text.lua  util.lua  window.lua
lua/sensai/config/: init.lua
lua/sensai/plugin/: commands.lua  init.lua  operations.lua
lua/sensai/scripts/: prompt.py  setup.py
