[tool.poetry]
name = "sensai-nvim"
version = "0.1.0"
description = ""
authors = ["Maximus Cisneros <mxcrcpu@gmail.com>"]
readme = "README.md"
packages = [{include = "sensai"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
